layout break fix

--- a/css/style.css
+++ b/css/style.css
@@ -789,7 +789,7 @@ header a:hover {
 }
 
 .skillsContent .skillsRightContent {
-  width: 44.7%;
+  width: 44%;
   min-height: 100vh;
   display: inline-block;
   background-color: #4a4949;
